# CWK2-The-Game-of-Life-C

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  game.c  gameInit.c  gameStructure.h  gameTest.c  main.c
